force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Family_Association__c.field-meta.xml
<CustomField>
    <fullName>CC_Family_Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family Association</label>
    <referenceTo>CC_Family_Association__c</referenceTo>
    <relationshipLabel>Application Contacts</relationshipLabel>
    <relationshipName>Application_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>