force-app/main/default/objects/CC_Application_Contact__c/fields/CC_First_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_First_Expiration_Date__c</fullName>
    <label>First Aid Expiration Date</label>
    <type>Date</type>
</CustomField>