force-app/main/default/objects/CC_Application_Contact__c/fields/CC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_First_Name__c</fullName>
    <description>Store the First Name of the person associated with the Application contact</description>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>