force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Foster_Placement__c.field-meta.xml
<CustomField>
    <fullName>CC_Foster_Placement__c</fullName>
    <label>Foster Placement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>