force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Gender__c.field-meta.xml
<CustomField>
    <fullName>CC_Gender__c</fullName>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gender</valueSetName>
    </valueSet>
</CustomField>