force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Has_MMR_Immunization__c.field-meta.xml
<CustomField>
    <fullName>CC_Has_MMR_Immunization__c</fullName>
    <label>Has MMR Immunization?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>