force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Has_Other_Addresses__c.field-meta.xml
<CustomField>
    <fullName>CC_Has_Other_Addresses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Other Addresses</label>
    <type>Checkbox</type>
</CustomField>