force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Has_Other_Alias_or_Names__c.field-meta.xml
<CustomField>
    <fullName>CC_Has_Other_Alias_or_Names__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have you ever gone by another name, including a maiden name, hyphenated name, or alias</description>
    <label>Has Other Alias or Names</label>
    <type>Checkbox</type>
</CustomField>