force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Has_SSN__c.field-meta.xml
<CustomField>
    <fullName>CC_Has_SSN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has SSN</label>
    <type>Checkbox</type>
</CustomField>