force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Have_served_in_Military__c.field-meta.xml
<CustomField>
    <fullName>CC_Have_served_in_Military__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have you served in the Military?</label>
    <type>Checkbox</type>
</CustomField>