force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Have_you_completed_First_Aid_Training__c.field-meta.xml
<CustomField>
    <fullName>CC_Have_you_completed_First_Aid_Training__c</fullName>
    <label>Have you completed First Aid Training?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>