force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Have_you_lived_in_another_state_s__c.field-meta.xml
<CustomField>
    <fullName>CC_Have_you_lived_in_another_state_s__c</fullName>
    <label>Have you lived in another state(s)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>