force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Highest_grade_completed__c.field-meta.xml
<CustomField>
    <fullName>CC_Highest_grade_completed__c</fullName>
    <inlineHelpText>Highest grade level completed for this Household Member?</inlineHelpText>
    <label>Highest grade completed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prek</fullName>
            </value>
            <value>
                <fullName>Kindergarten Second ori</fullName>
            </value>
            <value>
                <fullName>Third Grade</fullName>
            </value>
            <value>
                <fullName>Fourth Grade</fullName>
            </value>
            <value>
                <fullName>Fifth Grade</fullName>
            </value>
            <value>
                <fullName>Sixth Grade</fullName>
            </value>
            <value>
                <fullName>Seventh Grade</fullName>
            </value>
            <value>
                <fullName>Eight Grade</fullName>
            </value>
            <value>
                <fullName>High School Freshman</fullName>
            </value>
            <value>
                <fullName>High School Sophomore</fullName>
            </value>
            <value>
                <fullName>High School Junior</fullName>
            </value>
            <value>
                <fullName>High School Senior/GED</fullName>
            </value>
            <value>
                <fullName>Vo-Tech</fullName>
            </value>
            <value>
                <fullName>Associates Degree</fullName>
            </value>
            <value>
                <fullName>Bachelors Degree</fullName>
            </value>
            <value>
                <fullName>College/University Freshman</fullName>
            </value>
            <value>
                <fullName>College/University Junior</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>