force-app/main/default/objects/CC_Application_Contact__c/fields/CC_If_schedule_varies_please_explain__c.field-meta.xml
<CustomField>
    <fullName>CC_If_schedule_varies_please_explain__c</fullName>
    <label>If schedule varies, please explain.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>