force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Included_in_Parent_s_TANF_grant__c.field-meta.xml
<CustomField>
    <fullName>CC_Included_in_Parent_s_TANF_grant__c</fullName>
    <inlineHelpText>Are you included in the Parent’s TANF financial grant</inlineHelpText>
    <label>Included in Parent’s TANF grant?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>