force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Individual_Application__c.field-meta.xml
<CustomField>
    <fullName>CC_Individual_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individual Application</label>
    <referenceTo>IndividualApplication</referenceTo>
    <relationshipLabel>Application Contacts</relationshipLabel>
    <relationshipName>Application_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>