force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Infant_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Infant_Scheduled_Date__c</fullName>
    <label>Infant Safety Scheduled Date</label>
    <type>Date</type>
</CustomField>