force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Is_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Acknowledged</label>
    <type>Checkbox</type>
</CustomField>