force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Is_Authorized_Representative__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_Authorized_Representative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Represents the member or PAP is an authorized representative.</description>
    <label>Is Authorized Representative</label>
    <type>Checkbox</type>
</CustomField>