force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Is_Child__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_Child__c</fullName>
    <formula>IF(ISPICKVAL(CC_Is_disabled_or_has_a_special_need__c, &apos;Yes&apos;), ((TODAY() - CC_Date_of_Birth__c) / 365) &lt; 18, IF(ISPICKVAL(CC_Is_disabled_or_has_a_special_need__c, &apos;No&apos;), ((TODAY() - CC_Date_of_Birth__c) / 365) &lt; 12, false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Child</label>
    <type>Checkbox</type>
</CustomField>