force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Is_disabled_or_has_a_special_need__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_disabled_or_has_a_special_need__c</fullName>
    <label>Is disabled or has a special need?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>