force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Is_Mailing_Same_as_Billing__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_Mailing_Same_as_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mailing Same as Billing</label>
    <type>Checkbox</type>
</CustomField>