force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Is_member_currently_attending_school__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_member_currently_attending_school__c</fullName>
    <inlineHelpText>Is the household member currently attending school?</inlineHelpText>
    <label>Is member currently attending school?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>