force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Is_USCitizenUnderQualifiedAlienStatus__c.field-meta.xml
<CustomField>
    <fullName>CC_Is_USCitizenUnderQualifiedAlienStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is US Citizen Under QualifiedAlienStatus</label>
    <type>Checkbox</type>
</CustomField>