force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Last_Name__c</fullName>
    <description>Store Last Name of the person associated with the Application Contact</description>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>