force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Legal_guardian_for_household_member__c.field-meta.xml
<CustomField>
    <fullName>CC_Legal_guardian_for_household_member__c</fullName>
    <inlineHelpText>Does this member act as legal guardian for any household member?</inlineHelpText>
    <label>Legal guardian for household member?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>