force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Licensee__c.field-meta.xml
<CustomField>
    <fullName>CC_Licensee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licensee</label>
    <type>Checkbox</type>
</CustomField>