force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Lived_in_area_for_Indian_Reservation__c.field-meta.xml
<CustomField>
    <fullName>CC_Lived_in_area_for_Indian_Reservation__c</fullName>
    <label>Lived in area for Indian Reservation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Picklist</valueSetName>
    </valueSet>
</CustomField>