force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Maiden_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Maiden_Name__c</fullName>
    <label>Maiden Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>