force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>CC_Mailing_Address__c</fullName>
    <label>Mailing Address</label>
    <type>Address</type>
</CustomField>