force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>CC_Marital_Status__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Divorced</fullName>
            </value>
            <value>
                <fullName>Separated</fullName>
            </value>
            <value>
                <fullName>Widowed</fullName>
            </value>
            <value>
                <fullName>Windowed</fullName>
                <isActive>false</isActive>
                <label>Windowed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>