force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Medication_Administration_Attestation__c.field-meta.xml
<CustomField>
    <fullName>CC_Medication_Administration_Attestation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medication Administration Attestation</label>
    <type>Checkbox</type>
</CustomField>