force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Member_live_within_Tribal_Reservation__c.field-meta.xml
<CustomField>
    <fullName>CC_Member_live_within_Tribal_Reservation__c</fullName>
    <inlineHelpText>Does the household live within the geographic boundaries of a Tribal Reservation?</inlineHelpText>
    <label>Member live within Tribal Reservation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>