force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Member_Role__c.field-meta.xml
<CustomField>
    <fullName>CC_Member_Role__c</fullName>
    <description>Provider Staff Member Roles</description>
    <label>Member Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Roles</valueSetName>
    </valueSet>
</CustomField>