force-app/main/default/objects/CC_Application_Contact__c/fields/CC_MMR_Exemption_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_MMR_Exemption_Date__c</fullName>
    <label>MMR Exemption Date</label>
    <type>Date</type>
</CustomField>