force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Multi_Location_Staff__c.field-meta.xml
<CustomField>
    <fullName>CC_Multi_Location_Staff__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Staff Member Manage Multiple facilities?</description>
    <label>Multi Location Staff</label>
    <type>Checkbox</type>
</CustomField>