force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Name_of_School__c.field-meta.xml
<CustomField>
    <fullName>CC_Name_of_School__c</fullName>
    <label>Name of School</label>
    <length>255</length>
    <type>Text</type>
</CustomField>