force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Nominate_as_co_applicant__c.field-meta.xml
<CustomField>
    <fullName>CC_Nominate_as_co_applicant__c</fullName>
    <inlineHelpText>Would you like to nominate this person as the co-applicant on this application?</inlineHelpText>
    <label>Nominate as co-applicant?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>