force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Not_Convicted_Pending_crime__c.field-meta.xml
<CustomField>
    <fullName>CC_Not_Convicted_Pending_crime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Convicted Pending indictment crime</label>
    <type>Checkbox</type>
</CustomField>