force-app/main/default/objects/CC_Application_Contact__c/fields/CC_On_IEP_504_Part_C_or_Part_B__c.field-meta.xml
<CustomField>
    <fullName>CC_On_IEP_504_Part_C_or_Part_B__c</fullName>
    <inlineHelpText>Is the child on an IEP or 504 in school, enrolled or referred to Part C (Montana Milestones) or Part B (IDEA)?</inlineHelpText>
    <label>On IEP/504, Part C, or Part B?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>