force-app/main/default/objects/CC_Application_Contact__c/fields/CC_OpenCSEDCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>CC_OpenCSEDCaseNumber__c</fullName>
    <description>Field for OpenCSEDCaseNumber</description>
    <label>Open CSED Case Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>