force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Other_Names__c.field-meta.xml
<CustomField>
    <fullName>CC_Other_Names__c</fullName>
    <label>Other Names known by</label>
    <length>255</length>
    <type>Text</type>
</CustomField>