force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Other_Names_you_might_be_known_as__c.field-meta.xml
<CustomField>
    <fullName>CC_Other_Names_you_might_be_known_as__c</fullName>
    <inlineHelpText>Other Names you might be known as or have used in the past?</inlineHelpText>
    <label>Other Names you might be known as?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>