force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Other_Race__c.field-meta.xml
<CustomField>
    <fullName>CC_Other_Race__c</fullName>
    <label>Other Race</label>
    <length>18</length>
    <type>Text</type>
</CustomField>