force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Other_Responsibilities__c.field-meta.xml
<CustomField>
    <fullName>CC_Other_Responsibilities__c</fullName>
    <description>Other Designation Types</description>
    <label>Other Responsibilities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staff Development</fullName>
            </value>
            <value>
                <fullName>Staff Training</fullName>
            </value>
            <value>
                <fullName>Staff Orientation</fullName>
            </value>
            <value>
                <fullName>Staff Supervision</fullName>
            </value>
            <value>
                <fullName>Parent Involvement</fullName>
            </value>
            <value>
                <fullName>Social Services</fullName>
            </value>
            <value>
                <fullName>Infant / Toddler Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>