force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Parenting_plan_in_place_for_the_child__c.field-meta.xml
<CustomField>
    <fullName>CC_Parenting_plan_in_place_for_the_child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parenting plan in place for the child</label>
    <type>Checkbox</type>
</CustomField>