force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Participant__c.field-meta.xml
<CustomField>
    <fullName>CC_Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Application Contacts (Participant)</relationshipLabel>
    <relationshipName>Application_Contacts1</relationshipName>
    <type>Lookup</type>
</CustomField>