force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>CC_Person_Name__c</fullName>
    <formula>CC_First_Name__c + &apos; &apos;+ CC_Middle_Name__c + &apos; &apos;+ CC_Last_Name__c</formula>
    <label>Person Name</label>
    <type>Text</type>
</CustomField>