force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Phone_can_be_used_for_text_messages__c.field-meta.xml
<CustomField>
    <fullName>CC_Phone_can_be_used_for_text_messages__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Phone can be used for text messages</description>
    <label>Phone can be used for text messages</label>
    <type>Checkbox</type>
</CustomField>