force-app/main/default/objects/CC_Application_Contact__c/fields/CC_Please_describe_your_Education__c.field-meta.xml
<CustomField>
    <fullName>CC_Please_describe_your_Education__c</fullName>
    <label>Please describe your Education</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>